@@ -124,6 +124,9 @@ C-API
 Library
 -------
 
+- Issue #9042: Fix interaction of custom translation classes and caching in
+  gettext.
+
 - Issue #9065: tarfile no longer uses "root" as the default for the uname and
   gname field.
 
